kubernetes-files/test-app/test1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test1-app
  template:
    metadata:
      labels:
        app: test1-app
    spec:
      containers:
      - name: nginx-test-container-2
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test1-service
  labels:
    app: test1-app
spec:
  type: ClusterIP
  selector:
    app: test1-app
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
